k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ilovegeekos
  labels:
    app.kubernetes.io/name: ilovegeekos
