k8s/kubewarden_policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: container-resources-policy
spec:
  policyServer: container-resources-policy
  module: registry://ghcr.io/kubewarden/policies/container-resources:latest
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods"]
      operations:
        - CREATE
        - UPDATE
  mutating: true
  settings:
    memory:
      defaultRequest: "1G"
      defaultLimit: "1G"
      maxLimit: "2G"
      maxRequest: "1G"
      minRequest: "5M"
      minLimit: "5M"
    cpu:
      defaultRequest: 1
      defaultLimit: 1
      maxLimit: 2
      maxRequest: 1.5
      minRequest: 0.5
      minLimit: 0.5
